{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "62de46b0-ea04-4123-8230-68da2ff54011",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "beb68787-fac7-49e1-afaa-6951f419585a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap",
                    "initialStateCheck": false
                },
                {
                    "name": "Sneak",
                    "type": "Button",
                    "id": "258b4ed7-d15d-4916-a4ac-49d9bdd8cb37",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e7d2ac1d-a389-46ba-9861-b1387a1b40d5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0d68878-8e46-4458-b41d-9e0f95adf7a7",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sneak",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "2f065651-dec7-4878-93dd-a1f5bc1621c4",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "2c67badc-83ea-4d16-98f9-f7385dfe14b4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "440dd6ad-b3d4-4f53-8c8d-86ede430bc76",
                    "expectedControlType": "Vector2",
                    "processors": "InvertVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "Button",
                    "id": "259e72f8-0ca7-44f2-b69b-b1fe1cdb8aa2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FindPlayer",
                    "type": "Button",
                    "id": "42c56bb8-6775-4359-81ca-92ec64fd327f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "b7226ef5-2fa0-42e8-801b-ce9d4b435f81",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d2c64d8f-8b9a-47dc-915e-27ee6398466e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1e858e68-e52e-4404-a2a0-8bcaa4af010f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9d80a756-bd04-492d-9e66-803a9553068d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7cd900ad-7fcd-46de-b565-cf64c9c58bc8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "74614de6-9363-4d83-9962-ce20695ec7b1",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c224f34-c39a-47ec-807f-fe3b870587e8",
                    "path": "<Keyboard>/space",
                    "interactions": "Tap,MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "FindPlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "632f581f-e55d-462e-8567-fa37e9e4ab6b",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dea973b5-ac6d-4226-a256-362b271a022a",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb41dbb5-5acf-4c8e-a00e-1c579bc3d808",
                    "path": "<Joystick>/{Hatswitch}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interaction",
            "id": "8e58b25b-547e-4f20-a156-86cb376dc682",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "b94a3ab0-6c32-41a2-bede-dba288f4ef4d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "55e42255-d37b-4320-bac9-c0e9502fe2f0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "26c2a874-e969-48f3-813f-5a157b5f2e24",
            "actions": [
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "14dfb23e-71f9-45e0-bb61-3c29631d342b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1cc8fd76-6e9c-4825-9fe4-f602726dbf41",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}